--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.aarjugoyal.master_class_app.AboutActivity">
+    tools:context="com.example.aarjugoyal.master_class_app.AboutActivity"
+    android:background="@drawable/Light_jute">
 
     <TextView
         android:layout_width="match_parent"
