--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.aarjugoyal.master_class_app.MainActivity">
+    tools:context="com.example.aarjugoyal.master_class_app.MainActivity"
+    android:background="@drawable/Light_jute"
+    android:tileMode="repeat">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,11 +65,11 @@
 
         <Button
             android:id="@+id/Button1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="130sp"
+            android:layout_height="35sp"
             android:text="Click Here"
             android:layout_marginTop="25dp"
-
+            android:background="@drawable/Dark_jute"
             />
 
     </LinearLayout>
