--- a/app/src/main/res/layout/activity_venue.xml
+++ b/app/src/main/res/layout/activity_venue.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.aarjugoyal.master_class_app.VenueActivity">
+    tools:context="com.example.aarjugoyal.master_class_app.VenueActivity"
+    android:background="@drawable/Light_jute">
 
     <TextView
         android:layout_width="wrap_content"
