--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -15,23 +15,29 @@
     <Button
         android:id="@+id/Button1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="About"
         android:textSize="@dimen/Big"
+        android:background="@drawable/Dark_jute"
+        android:layout_height="60sp"
+        android:layout_marginVertical="10dp"
         />
     <Button
         android:id="@+id/Button2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="Book a Seat"
         android:textSize="@dimen/Big"
+        android:background="@drawable/Dark_jute"
+        android:layout_height="60sp"
+        android:layout_marginVertical="10dp"
         />
     <Button
         android:id="@+id/Button3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="Venue"
         android:textSize="@dimen/Big"
+        android:background="@drawable/Dark_jute"
+        android:layout_height="60sp"
+        android:layout_marginVertical="10dp"
         />
 
     </LinearLayout>
